@@ -114,6 +114,7 @@ Application Changes:
 - Added a house rule to enable Barehanded Adept to take spells as Limited through a fetish. RAW indicates that these spells would not normally be available to Barehanded Adepts as a Limited spell is not acquired through the same mechanism.
 - Implemented an essence filter for the SelectCyberware form to allow filtering available Cyberware. 
 - Implemented an xpath filter for Weapon Mounts to further refine the available weapons. This uses the weaponfilter property, which takes an XPath expression that is evaluated against each weapon in the database. If the expression returns true, the weapon is shown as available for the mount. As an example, the Mini weapon mount uses ((type != "Melee") or (type = "Melee" and reach = "0")) to exclude melee weapons with reach greater than 0.
+- Implemented skillenablemovement improvement. This is used to enable skills that are usually kept disabled by movement types (i.e. Flight requiring a movement speed type that includes Flight speed)
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://jackpoint.live/index.php?topic=31750.msg544923#msg544923.
